--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
     <%= yield %>
+     <%= form_tag(mangas_path, :method => "get", id: "search-form") do %>
+    	<%= text_field_tag :search, params[:search], placeholder: "Search Manga" %>
+    	<%= submit_tag "Search", :name => nil %>
+    <% end %>
   </body>
 </html>
