--- a/app/views/mangas/index.html.erb
+++ b/app/views/mangas/index.html.erb
@@ -1,6 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Mangas</h1>
+<h1 class="title"><center>One Stop Manga Shop!</h1></center>
+
+<div class="topnav" id="myTopnav">
+  <a href="#home">Home</a>
+  <a href="#categories">Categories</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="#cart">Shopping Cart</a>
+  <a><%= form_tag(mangas_path, :method => "get", id: "search-form") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search Manga" %>
+      <%= submit_tag "Search", :name => nil %>
+    <% end %></a>
+</div>
 
 <table>
   <thead>
