--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<h1><center>Categories</center></h1>
+
+<% @categories.each do |cat| %>
+	<h2><%= cat.name %></h2>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Description</th>
+      <th>Stock quantity</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @manga.where("category_id = #{cat.id}").each do |manga| %>
+      <tr>
+        <td><%= manga.title %></td>
+        <td><%= manga.author %></td>
+        <td><%= manga.description %></td>
+        <td><%= manga.stock_quantity %></td>
+        <td><%= link_to 'Show', manga %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<% end %>
