--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,10 @@
 <h1><center>Categories</center></h1>
+<%= form_tag categories_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search], placeholder: "Search Categories" %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
 
 <% @categories.each do |cat| %>
 	<h2><%= cat.name %></h2>
@@ -27,3 +33,4 @@
 </table>
 
 <% end %>
+<!--@manga.where("category_id = #{cat.id}").each -->
