--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -1,29 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Abouts</h1>
+<% @abouts.each do |about| %>
+  <h1><center><%= about.title %></center></h1>
+  <p><center><%= about.content %></center></p>
+  
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @abouts.each do |about| %>
-      <tr>
-        <td><%= about.title %></td>
-        <td><%= about.content %></td>
-        <td><%= link_to 'Show', about %></td>
-        <td><%= link_to 'Edit', edit_about_path(about) %></td>
-        <td><%= link_to 'Destroy', about, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New About', new_about_path %>
