--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -4,7 +4,7 @@
   <%= link_to 'Home', mangas_path %>
   <%= link_to 'Categories', categories_path %>
   <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <%= link_to 'About', about_index_path %>
   <a href="#cart">Shopping Cart</a>
   <a><%= form_tag(mangas_path, :method => "get", id: "search-form") do %>
       <%= text_field_tag :search, params[:search], placeholder: "Search Manga" %>
