--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -3,7 +3,7 @@
 <div class="topnav" id="myTopnav">
   <%= link_to 'Home', mangas_path %>
   <%= link_to 'Categories', categories_path %>
-  <a href="#contact">Contact</a>
+  <%= link_to 'Contact', contact_index_path %>
   <%= link_to 'About', about_index_path %>
   <a href="#cart">Shopping Cart</a>
   <a><%= form_tag(mangas_path, :method => "get", id: "search-form") do %>
