--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Cart#index</h1>
-<p>Find me in app/views/cart/index.html.erb</p>
+<h1>Your Cart</h1>
+
+<% if session[:content].empty? %>
+
+	<p>Nothing in the Cart</p>
+<% else %>
+<% session[:content].each do |id| %>
+	<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Description</th>
+      <th>Stock quantity</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @manga.where("id = #{id}").each do |manga| %>
+      <tr>
+        <td><%= manga.title %></td>
+        <td><%= manga.author %></td>
+        <td><%= manga.description %></td>
+        <td><%= manga.stock_quantity %></td>
+        <td><%= link_to 'Show', manga %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<% end %>
+<% end %>
+<%= link_to 'Checkout', checkout_path %>
+<%= link_to "Clear Cart", clear_path, method: :delete %>
