--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -5,7 +5,7 @@
   <%= link_to 'Categories', categories_path %>
   <%= link_to 'Contact', contact_index_path %>
   <%= link_to 'About', about_index_path %>
-  <a href="#cart">Shopping Cart</a>
+  <%= link_to 'Shopping Cart', cart_path %>
   <a><%= form_tag(mangas_path, :method => "get", id: "search-form") do %>
       <%= text_field_tag :search, params[:search], placeholder: "Search Manga" %>
       <%= submit_tag "Search", :name => nil %>
