--- a/app/views/cart/checkout.html.erb
+++ b/app/views/cart/checkout.html.erb
@@ -1,1 +1,38 @@
 <h1>Checkout!</h1>
+<%= form_for @customer do |form| %>
+
+<div class="field">
+	<%= form.label :first_name %>
+	<%= form.text_field :first_name, id: :customer_first_name %>
+</div>
+
+<div class="field">
+	<%= form.label :last_name %>
+	<%= form.text_field :last_name, id: :customer_last_name %>
+</div>
+
+<div class="field">
+	<%= form.label :email %>
+	<%= form.text_field :email, id: :customer_email %>
+</div>
+
+<div class="field">
+	<%= form.label :address %>
+	<%= form.text_field :address, id: :customer_address %>
+</div>
+
+<div class="field">
+	<%= form.label :city %>
+	<%= form.text_field :city, id: :customer_city %>
+</div>
+
+<div class="field">
+	<%= form.label :country %>
+	<%= form.text_field :country, id: :customer_country %>
+</div>
+
+<div class="field">
+	<%= form.label :postal_code %>
+	<%= form.text_field :postal_code, id: :customer_postal_code %>
+</div>
+<% end %>
