--- a/app/views/cart/checkout.html.erb
+++ b/app/views/cart/checkout.html.erb
@@ -35,4 +35,8 @@
 	<%= form.label :postal_code %>
 	<%= form.text_field :postal_code, id: :customer_postal_code %>
 </div>
+
+<div class="actions">
+    <%= form.submit %>
+  </div>
 <% end %>
