Completed Stripe functionality

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,2 +1,20 @@
-<h1>Charges#new</h1>
-<p>Find me in app/views/charges/new.html.erb</p>
+<h1>Pay with Stripe</h1>
+
+<%= form_tag charges_path do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
+    <label class="amount">
+      <span>Amount: <%= number_to_currency(((session[:total]).to_f)) %></span>
+    </label>
+  </article>
+
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="<%= @description %>"
+          data-amount="<%= number_to_currency(((session[:total]).to_f)) %>"
+          data-locale="auto"></script>
+<% end %>
