--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,2 +1,1 @@
-<h1>Charges#create</h1>
-<p>Find me in app/views/charges/create.html.erb</p>
+<h2>Thanks, you paid <strong><%= number_to_currency(((session[:total]).to_f)) %></strong>!</h2>
