Created the Status column for order table to display when a new order has been created and when its been paid

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,9 @@
-<h2>Thanks, you paid <strong><%= number_to_currency(((session[:total]).to_f)) %></strong>!</h2>
+<h2>Thanks, you paid <strong><%=number_to_currency(((session[:total]).to_f)) %></strong>!</h2>
+
+<%
+	@order = Order.where("id = #{(session[:order_id].to_i)}").first
+	@order.status = "PAID"
+	@order.save
+
+	session[:content].clear
+%>
